--- a/Relatorio.ipynb
+++ b/Relatorio.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "5575e1a9",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "67eff1be",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "5b44b623",
    "metadata": {},
    "outputs": [
@@ -316,12 +316,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  InicioPeriodo  FimPeriodo codigoSegmento         Segmento codigoModalidade  \\\n",
-       "0    2025-05-19  2025-05-23              2  Pessoa Jurídica           502205   \n",
-       "1    2025-05-19  2025-05-23              2  Pessoa Jurídica           502205   \n",
-       "2    2025-05-19  2025-05-23              2  Pessoa Jurídica           502205   \n",
-       "3    2025-05-19  2025-05-23              2  Pessoa Jurídica           502205   \n",
-       "4    2025-05-19  2025-05-23              2  Pessoa Jurídica           502205   \n",
+       "  InicioPeriodo FimPeriodo codigoSegmento         Segmento codigoModalidade  \\\n",
+       "0    2025-05-19 2025-05-23              2  Pessoa Jurídica           502205   \n",
+       "1    2025-05-19 2025-05-23              2  Pessoa Jurídica           502205   \n",
+       "2    2025-05-19 2025-05-23              2  Pessoa Jurídica           502205   \n",
+       "3    2025-05-19 2025-05-23              2  Pessoa Jurídica           502205   \n",
+       "4    2025-05-19 2025-05-23              2  Pessoa Jurídica           502205   \n",
        "\n",
        "                                          Modalidade  Posicao  \\\n",
        "0  Adiantamento sobre contratos de câmbio (ACC) -...        1   \n",
@@ -338,7 +338,7 @@
        "4          BBVA BRASIL BI S.A.            0.42            5.19  45283173  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "c1f715a7",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "0b61f2b2",
    "metadata": {},
    "outputs": [
@@ -371,23 +371,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 675499 entries, 0 to 675498\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
       "Data columns (total 11 columns):\n",
-      " #   Column                 Non-Null Count   Dtype         \n",
-      "---  ------                 --------------   -----         \n",
-      " 0   InicioPeriodo          675499 non-null  datetime64[ns]\n",
-      " 1   FimPeriodo             675499 non-null  datetime64[ns]\n",
-      " 2   codigoSegmento         675499 non-null  object        \n",
-      " 3   Segmento               675499 non-null  object        \n",
-      " 4   codigoModalidade       675499 non-null  object        \n",
-      " 5   Modalidade             675499 non-null  object        \n",
-      " 6   Posicao                675499 non-null  int64         \n",
-      " 7   InstituicaoFinanceira  675499 non-null  object        \n",
-      " 8   TaxaJurosAoMes         675499 non-null  float64       \n",
-      " 9   TaxaJurosAoAno         675499 non-null  float64       \n",
-      " 10  cnpj8                  675499 non-null  object        \n",
+      " #   Column                 Non-Null Count  Dtype         \n",
+      "---  ------                 --------------  -----         \n",
+      " 0   InicioPeriodo          10000 non-null  datetime64[ns]\n",
+      " 1   FimPeriodo             10000 non-null  datetime64[ns]\n",
+      " 2   codigoSegmento         10000 non-null  object        \n",
+      " 3   Segmento               10000 non-null  object        \n",
+      " 4   codigoModalidade       10000 non-null  object        \n",
+      " 5   Modalidade             10000 non-null  object        \n",
+      " 6   Posicao                10000 non-null  int64         \n",
+      " 7   InstituicaoFinanceira  10000 non-null  object        \n",
+      " 8   TaxaJurosAoMes         10000 non-null  float64       \n",
+      " 9   TaxaJurosAoAno         10000 non-null  float64       \n",
+      " 10  cnpj8                  10000 non-null  object        \n",
       "dtypes: datetime64[ns](2), float64(2), int64(1), object(6)\n",
-      "memory usage: 56.7+ MB\n"
+      "memory usage: 859.5+ KB\n"
      ]
     }
    ],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "9e3914ad",
    "metadata": {},
    "outputs": [
@@ -430,18 +430,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>675499.000000</td>\n",
-       "      <td>675499.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>4.515171</td>\n",
-       "      <td>99.572790</td>\n",
+       "      <td>4.743769</td>\n",
+       "      <td>105.736767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>4.602336</td>\n",
-       "      <td>230.089185</td>\n",
+       "      <td>4.712019</td>\n",
+       "      <td>163.344035</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -450,23 +450,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.670000</td>\n",
-       "      <td>21.980000</td>\n",
+       "      <td>1.770000</td>\n",
+       "      <td>23.410000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2.330000</td>\n",
-       "      <td>31.880000</td>\n",
+       "      <td>2.520000</td>\n",
+       "      <td>34.820000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>5.700000</td>\n",
-       "      <td>94.450000</td>\n",
+       "      <td>6.142500</td>\n",
+       "      <td>104.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>82.210000</td>\n",
-       "      <td>133792.510000</td>\n",
+       "      <td>22.070000</td>\n",
+       "      <td>994.610000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -474,17 +474,17 @@
       ],
       "text/plain": [
        "       TaxaJurosAoMes  TaxaJurosAoAno\n",
-       "count   675499.000000   675499.000000\n",
-       "mean         4.515171       99.572790\n",
-       "std          4.602336      230.089185\n",
+       "count    10000.000000    10000.000000\n",
+       "mean         4.743769      105.736767\n",
+       "std          4.712019      163.344035\n",
        "min          0.000000        0.000000\n",
-       "25%          1.670000       21.980000\n",
-       "50%          2.330000       31.880000\n",
-       "75%          5.700000       94.450000\n",
-       "max         82.210000   133792.510000"
+       "25%          1.770000       23.410000\n",
+       "50%          2.520000       34.820000\n",
+       "75%          6.142500      104.500000\n",
+       "max         22.070000      994.610000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "55047abd",
    "metadata": {},
    "outputs": [
@@ -504,8 +504,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Taxa de Juros ao Mês: Média=4.52%, Variância=21.1815, Desvio Padrão=4.60\n",
-      "Taxa de Juros ao Ano: Média=99.57%, Variância=52941.0331, Desvio Padrão=230.09\n"
+      "Taxa de Juros ao Mês: Média=4.74%, Variância=22.2031, Desvio Padrão=4.71\n",
+      "Taxa de Juros ao Ano: Média=105.74%, Variância=26681.2737, Desvio Padrão=163.34\n"
      ]
     }
    ],
